Add ZoneLayoutFactory usage
Signed-off-by: Thomas ADAM <tadam@silicom.fr>